--- a/dev/copticpages/views/home.html
+++ b/dev/copticpages/views/home.html
@@ -1,6 +1,47 @@
 <div id="home-view">
+
+	<!--
+	<div class="wrapper">
+		<div id="cities-container">
+			<ul id="cities-list">
+				<li>
+					<h5>Alberta</h5>
+					<ul>
+						<li><a>Calgary</a></li>
+						<li><a>Edmonton</a></li>
+					</ul>
+				</li>
+				<li>
+					<h5>British Columbia</h5>
+					<ul>
+						<li><a>Vancouver</a></li>
+						<li><a>Victoria</a></li>
+					</ul>
+				</li>
+				<li>
+					<h5>Ontario</h5>
+					<ul>
+						<li><a>London</a></li>
+						<li><a>Kingston</a></li>
+						<li><a>Toronto (GTA)</a></li>
+						<li><a>Ottawa</a></li>
+						<li><a>Windor</a></li>
+						<li><a>St Catharines</a></li>
+					</ul>
+				</li>
+				<li>
+					<h5>Quebec</h5>
+					<ul>
+						<li><a>Montreal</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</div>
+	-->
+
 	<section id="search-container">
-		<section>
+		<section class="section-container">
 			<label for="search-type">What type of business are you looking for?</label>
 			<input id="search-type" type="text" />
 		</section>
@@ -16,6 +57,6 @@
 				<label for="search-entire-dir">Search entire directory</label>
 			</section>
 		</section>
-		<a id="search-button" class="button-glossy yellow hide_when_printing" href="#">Search</a>
+		<a id="search-button" href="/get/sharing" class="btn-blue">Search</a>
 	</section>
 </div>
