--- a/style/project.css
+++ b/style/project.css
@@ -10,7 +10,10 @@ pre {
     text-shadow: none;
 }
 h1 {
-    font-size: 100px
+    font-size: 100px;
+    margin: 0;
+    padding: 0;
+    text-shadow: 0 1px 0 white;
 }
 #txtlzr {
   margin-top: 20px;
