--- a/style/project.css
+++ b/style/project.css
@@ -10,9 +10,10 @@ pre {
     text-shadow: none;
 }
 h1 {
-    font-size: 100px;
+    font-size: 70px;
     margin: 0;
     padding: 0;
+    font-family: 'Arial',sans-serif;
     text-shadow: 0 1px 0 white;
 }
 #txtlzr {
