--- a/style/default.css
+++ b/style/default.css
@@ -3,7 +3,6 @@ html {
 }
 body {
     margin-top: 1.0em;
-    background-color: #ffffff;
     background: url("../images/bg.png") repeat scroll 0 0 transparent;
     color: #333333;
     font-family: Helvetica,Arial,sans-serif;
@@ -84,7 +83,7 @@ p {
 
 header {
     background-color: black;
-    background-image: url("http://static.nodesocket.com/doc/images/denim.png");
+    background-image: url("../images/denim.png");
     height: 45px;
     left: 0px;
     position: fixed;
