fixed nav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,8 @@ ga_account_id: UA-25301489-1
       <nav id="site-nav" role="navigation">
         <ul id="site-menu">
           <li {% if page.name == "" %}class="selected"{% endif %}><a href="./">Home</a></li>
-          <li {% if page.name == "projects" %}class="selected"{% endif %}><a href="./projects.html">Projects</a></li>
-          <li {% if page.name == "about" %}class="selected"{% endif %}><a href="./about.html">About me</a></li>
+          <li {% if page.name == "projects" %}class="selected"{% endif %}><a href="/projects.html">Projects</a></li>
+          <li {% if page.name == "about" %}class="selected"{% endif %}><a href="/about.html">About me</a></li>
         </ul>
       </nav>
     </header>
