--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,7 +3,7 @@ layout: default
 name: projects
 ---
 
-<a href="http://github.com/krisk/{{ page.project }}" target="_blank"><img class="github-fork" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<a href="http://github.com/krisk/{{ page.project }}" target="_blank"><img class="github-fork" src="../images/forkme.png" alt="Fork me on GitHub" /></a>
 
 <div id="project">
   <h1>{{ page.title }}</h1>
