--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,8 @@
 body {
     margin-top: 1.0em;
-    background: url("../images/bg.png") repeat scroll 0 0 transparent;
+    /*background: url("../images/bg.png") repeat scroll 0 0 transparent;*/
     color: #333333;
-    font-family: Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 16px;
 }
 ul, li {
