--- a/css/project.css
+++ b/css/project.css
@@ -10,11 +10,10 @@ pre {
     text-shadow: none;
 }
 h1 {
-    font-size: 70px;
+    font-size: 64px;
+    font-weight: 300;
     margin: 0;
     padding: 0;
-    font-family: 'Arial',sans-serif;
-    text-shadow: 0 1px 0 white;
 }
 #download  {
     margin-top: 10px;
