--- a/css/default.css
+++ b/css/default.css
@@ -10,9 +10,12 @@ ul, li {
     padding: 0;
     list-style: none;
 }
+#main {
+    width: 960px;
+    margin: auto;
+}
 #container {
-    margin: 60px auto 0 auto;
-    width: 800px;
+    margin-right: 260px;
 }
 #site-nav {
     float: right;
@@ -26,47 +29,32 @@ ul, li {
     cursor: pointer;
 }
 #site-menu li a {
-    color: white;
+    color: steelBlue;
     padding: 0;
     margin: 0;
-    font-weight: lighter;
-    font-family: Helvetica, arial;
-    line-height: 45px;
-    font-size: 18px;
-    text-shadow: 1px 1px 0px black;
     text-decoration: none;
+    display: inline-block;
 }
 #site-menu li.selected a {
-    color: rgb(48, 118, 182);
+    border-bottom: 2px solid steelBlue;
+    padding-bottom: 3px;
 }
 #site-menu li a:hover {
     color: rgb(48, 118, 182);
 }
 #logo {
-    font-family: 'Bilbo', cursive;
-    font-weight: 400;
-    font-size: 35px;
-    padding: 2px 0 2px 10px;
-    color: white;
-    text-shadow: 1px 1px 0px black;
-    display: inline-block;
+    color: #666;
     text-decoration: none;
-    float: left;
+    font-size: 17px;
 }
 .github-fork {
-    position: fixed;
-    top: 45px;
+    position: absolute;
+    top: 0;
     right: 0;
     border: 0;
 }
 header {
-    background-color: black;
-    background-image: url("../images/denim.png");
-    height: 45px;
-    left: 0px;
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    z-index: 1;
-    font-size: 1.3em;
+    height: 30px;
+    border-bottom: 2px solid #CACACA;
+    margin-bottom: 10px;
 }
