--- a/style/default.css
+++ b/style/default.css
@@ -1,17 +1,18 @@
-html {
-
-}
 body {
     margin-top: 1.0em;
-    background: url("../images/bg.png") repeat scroll 0 0 transparent;
+    /*background: url("../images/bg.png") repeat scroll 0 0 transparent;*/
     color: #333333;
-    font-family: Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 16px;
 }
 ul, li {
     margin: 0;
     padding: 0;
     list-style: none;
+}
+#container {
+    margin: 60px auto 0 auto;
+    width: 500px;
 }
 #site-nav {
     float: right;
@@ -38,7 +39,9 @@ ul, li {
 #site-menu li.selected a {
     color: rgb(48, 118, 182);
 }
-
+#site-menu li a:hover {
+    color: rgb(48, 118, 182);
+}
 #logo {
     font-family: 'Bilbo', cursive;
     font-weight: 400;
@@ -50,37 +53,13 @@ ul, li {
     text-decoration: none;
     float: left;
 }
-
-#container {
-    margin: 60px auto 0 auto;
-    width: 800px;
-}
-
-h3 a {
-    text-decoration: none;
-}
-h3 a:hover,
-#site-menu li a:hover {
-    color: rgb(48, 118, 182);
-}
-
-a {
-    color: #333333;
-}
-a:hover {
-    color: #000000;
-}
-p {
-    line-height: 1.4em;
-}
-
 .github-fork {
     position: fixed;
     top: 45px;
     right: 0;
     border: 0;
 }
-
+/*
 header {
     background-color: black;
     background-image: url("../images/denim.png");
@@ -92,11 +71,4 @@ header {
     z-index: 1;
     font-size: 1.3em;
 }
-
-#project-list {
-
-}
-
-#project-list li {
-    border-bottom: 1px solid #AEAEAE;
-}
+*/
