--- a/css/default.css
+++ b/css/default.css
@@ -5,6 +5,9 @@ body {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 16px;
 }
+a {
+    color: steelBlue;
+}
 ul, li {
     margin: 0;
     padding: 0;
