--- a/css/project.css
+++ b/css/project.css
@@ -1,9 +1,6 @@
 p {
     line-height: 1.4em;
 }
-a {
-    color: #333;
-}
 pre {
     font-size: 14px;
     line-height: 18px;
@@ -15,30 +12,14 @@ h1 {
     margin: 0;
     padding: 0;
 }
-#download  {
-    margin-top: 10px;
+
+.download-list {
+    margin-left: 42px;
 }
-#download a {
-    background: url("../images/download.png") no-repeat scroll 15px 12px #56BA4A;
-    border: 3px solid #59A24F;
-    border-radius: 5px 5px 5px 5px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-    color: #FFFFFF;
-    display: inline-block;
-    font-family: 'Amaranth',sans-serif;
-    font-size: 24px;
-    margin-right: 20px;
-    padding: 10px 15px 10px 50px;
-    text-decoration: none;
-    text-shadow: 1px 1px 1px #59A24F;
+.download-list li {
+    list-style-type: disc;
 }
-#download a:hover {
-    background-color: #2F8325;
-    box-shadow: none;
-}
-#download a span {
-    font-size: 15px;
-}
+
 #profile-image {
     border: 3px solid #EEEEEE;
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
