--- a/css/project.css
+++ b/css/project.css
@@ -58,3 +58,7 @@ h1 {
     border-top: 1px solid #AEAEAE;
     margin: 30px 0;
 }
+.fuse-checkbox {
+    margin-left: 15px;
+    margin-right: 5px;
+}
