added social media

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,12 @@ layout: default
 
 <h2>{{ page.title }}</h2>
 <div class="byline">
-  <address class="author">By <a rel="author" href="mailto:kirollos@gmail.com" title="Kiro Risk">K. Risk</a></address>, on <time pubdate datetime="{{ page.date | date: "%B %d %Y" }}">{{ page.date | date_to_string }}</time>
+  <address class="author"><a rel="author" href="mailto:kirollos@gmail.com" title="Kiro Risk">Kiro Risk</a></address>
+  <span class="separator">|</span>
+  <time class="pubdate" pubdate datetime="{{ page.date | date: "%B %d %Y" }}">{{ page.date | date_to_string }}</time>
 </div>
+
+{% include social_media_buttons.md %}
 
 {{ content }}
 
