--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,6 +6,9 @@ name: projects
 <a href="http://github.com/krisk/{{ page.project }}" target="_blank"><img class="github-fork" src="../images/forkme.png" alt="Fork me on GitHub" /></a>
 
 <h1>{{ page.title }}</h1>
+
+{% include social_media_buttons.md %}
+
 {{ content }}
 
 {% include comments.md %}
