--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,27 +86,25 @@ ga_account_id: UA-25301489-1
         </p>
         -->
 
-        <p>
-          <a href="http://www.linkedin.com/in/kirollos" style="text-decoration:none;">
-            <span><img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />View my LinkedIn profile</span>
-          </a>
-        </p>
-
         <a href="https://twitter.com/kirorisk" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @kirorisk</a>
         <script>
           !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
         </script>
 
+        <p>
+          <a id="feedrss" title="Subscribe to this blog..." href="http://feeds.feedburner.com/krisk"><img src="/images/rss.png"/>Subscribe to the RSS feed</a>
+        </p>
+
+        <p>
+          <a href="http://www.linkedin.com/in/kirollos">
+            <img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />View my LinkedIn profile
+          </a>
+        </p>
+
         <!--
         <a href="http://www.linkedin.com/in/kirollos">
           <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x25.png" width="160" height="25" border="0" alt="View Kirollos Risk's profile on LinkedIn">
         </a>
-        -->
-
-        <!--
-        <p>
-          <a id="feedrss" title="Subscribe to this blog..." href="http://feeds.feedburner.com/krisk">Subscribe to the RSS feed</a>
-        </p>
         -->
     </div>
 
