--- a/css/default.css
+++ b/css/default.css
@@ -172,6 +172,27 @@ footer {
     border: 3px solid white;
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
 }
+.posts li {
+    border-bottom: 1px solid #DDD;
+    padding: 10px 0;
+}
+.posts li small {
+    color: #999;
+}
+.posts h3 {
+    margin: 0;
+    font-size: 18px;
+}
+.posts h3 a {
+    text-decoration: none;
+}
+.posts h3 a:hover {
+    text-decoration: underline;
+    color: #005580;
+}
+.posts p {
+    margin: 0;
+}
 /*
 aside {
     font-size: 12px;
