--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@ ga_account_id: UA-25301489-1
           <ul id="site-menu">
             <li {% if page.name == "" %}class="selected"{% endif %}><a href="/">Home</a></li>
             <li {% if page.name == "projects" %}class="selected"{% endif %}><a href="/projects.html">Projects</a></li>
-            <!--<li {% if page.name == "about" %}class="selected"{% endif %}><a href="/about.html">About me</a></li>-->
+            <li {% if page.name == "contact" %}class="selected"{% endif %}><a href="/contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
