--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <h2>{{ page.title }}</h2>
 <div class="byline">
-  <address class="author"><a rel="author" href="mailto:kirollos@gmail.com" title="Kiro Risk">Kiro Risk</a></address>
+  <address class="author"><a rel="author" href="mailto:kiro@kiro.me" title="Kiro Risk">Kiro Risk</a></address>
   <span class="separator">|</span>
   <time class="pubdate" pubdate datetime="{{ page.date | date: "%B %d %Y" }}">{{ page.date | date_to_string }}</time>
 </div>
