--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@ ga_account_id: UA-25301489-1
         <p>I live in Silicon Valley.</p>
 
         <p>
-          Questions? Feel free to <a href="mailto:kirollos@gmail.com">contact me</a>.
+          Questions? Feel free to <a href="mailto:kiro@kiro.me">contact me</a>.
         </p>
 
         <!--
