--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -92,12 +92,12 @@ ga_account_id: UA-25301489-1
         </script>
 
         <p>
-          <a id="feedrss" title="Subscribe to this blog..." href="http://feeds.feedburner.com/krisk"><img src="/images/rss.png"/>Subscribe to the RSS feed</a>
+          <a id="feedrss" title="Subscribe to this blog..." href="http://feeds.feedburner.com/krisk"><img src="/images/rss2.png"/>Subscribe to the RSS feed</a>
         </p>
 
         <p>
           <a href="http://www.linkedin.com/in/kirollos">
-            <img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />View my LinkedIn profile
+            <img src="http://www.linkedin.com/img/webpromo/btn_in_20x15.png" width="21" height="16" alt="Kiro Risk's LinkedIn profile" style="vertical-align:top" border="0" />View my LinkedIn profile
           </a>
         </p>
 
