--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,11 @@ ga_account_id: UA-25301489-1
   {% if page.summary %}
   <meta name="description" content="{{ page.summary }}">
   {% endif %}
+
+  <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" name="viewport">
+  <meta content="yes" name="apple-mobile-web-app-capable">
+  <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
+
   <!--
     I'm a front-end developer, a JavaScript afficionado, and I like all things web-related.
     If the mark-up of this page looks hideous, we can blame it on Jekyll.
