--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -2,7 +2,7 @@
     <p>
       {% if page.previous.url %}
         <a href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">
-          « Previous blog post
+          &laquo; {{page.previous.title}}
         </a>
       {% endif %}
       {% if page.previous.url and page.next.url %}
@@ -10,7 +10,7 @@
       {% endif %}
       {% if page.next.url %}
         <a href="{{page.next.url}}" title="Next Post: {{page.next.title}}">
-          Next blog post »
+          {{page.next.title}} &raquo;
         </a>
       {% endif %}
     </p>
