--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,11 +23,9 @@ layout: default
 
 {% include pagination.html %}
 
-{% include comments.md %}
-
 <!--
-<div id="related">
-  <h3>Related Posts</h3>
+<div id="related-posts">
+  <h4>Related Posts</h4>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
@@ -35,3 +33,5 @@ layout: default
   </ul>
 </div>
 -->
+
+{% include comments.md %}
