Added RSS link in head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@ ga_account_id: UA-25301489-1
   <meta name="keywords" content="{{ page.keywords }}">
   {% endif %}
 
+  <link rel="alternate" type="application/rss+xml" title="K. Risk - JavaScript Refined" href="/feed.xml" />
   <link href="/css/default.css" rel="stylesheet" type="text/css">
 
   {% for css in page.css %}
